[tool.poetry]
name = "protool"
version = "1.1.2"
description = "A tool for dealing with provisioning profiles"

license = "MIT"

authors = [
    "Dale Myers <dalemy@microsoft.com>"
]

readme = 'README.md'

repository = "https://github.com/Microsoft/protool"
homepage = "https://github.com/Microsoft/protool"

keywords = ['provisioning', 'profiles', 'apple', 'ios', 'xcode', 'mobileprovision']

classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development',
    'Topic :: Utilities'
]

[tool.poetry.scripts]
protool = 'protool:command_line.run'

[tool.poetry.dependencies]
python = "^3.7.2"
pyOpenSSL =">=21.0.0"

[tool.poetry.dev-dependencies]
black = "=23.1.0"
mypy = "=1.0.1"
pylint = "=2.16.2"
pytest = "=7.2.1"
pytest-cov = "=4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
