[tool.poetry]
name = "protool"
version = "2.0.0"
description = "A tool for dealing with provisioning profiles"

license = "MIT"

authors = [
    "Dale Myers <dalemy@microsoft.com>"
]

readme = 'README.md'

repository = "https://github.com/Microsoft/protool"
homepage = "https://github.com/Microsoft/protool"

keywords = ['provisioning', 'profiles', 'apple', 'ios', 'xcode', 'mobileprovision']

classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Utilities'
]

[tool.poetry.scripts]
protool = 'protool:command_line.run'

[tool.poetry.dependencies]
python = "^3.8"
pyOpenSSL ="^23.2.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
types-pyOpenSSL = "^23.2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
